hiden kbd on narrow screens (fixes #473)

--- a/src/styles/bootstrap-override.scss
+++ b/src/styles/bootstrap-override.scss
@@ -69,4 +69,8 @@ input[type='time'] {
   .btn {
     padding: 6px 9px;
   }
+
+  kbd {
+    display: none;
+  }
 }
